app/css/style.css
@font-face {
    font-family: 'capture_itregular';
    src: url('../fonts/capture-it/capture_it-webfont.woff2') format('woff2'),
         url('../fonts/capture-it/capture_it-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'first_orderregular';
    src: url('../fonts/first-order/firstorder-webfont.woff2') format('woff2'),
         url('../fonts/first-order/firstorder-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

/* Utilities */
.grid-wrp {
  display: grid;
}

.img-drop-shadow {
  filter: drop-shadow( 0 0 4px #fff );
}

.section-overflow-hidden {
  overflow: hidden;
}

.grid-12cols {
  grid-template-columns: repeat( 12, 1fr );
}

.grid-wrp-inline {
  display: inline-grid;
}

.outline-0-onfocus:focus {
  outline: 0 !important;
}

.background-no-repeat-cover {
  background-repeat: no-repeat !important;
  background-size: cover !important;
}

.bg-attachment-fixed {
  background-attachment: fixed !important;
}

.cursor-pointer {
  cursor: pointer;
}

.overflow-hidden {
  overflow-x: hidden !important;
}

.position-relative {
  position: relative;
}

.position-absolute {
  position: absolute !important;
}

.position-fixed {
  position: fixed;
}

.h-100vh {
  height: 100vh;
}

.box-shadow {
  box-shadow: 0 0 8px rgba(0, 0, 0, .3);
}

.flip {
  transform: scale(-1);
}

.border--wider {
  border-width: 3px !important;
}

.container-mg-t {
  margin-top: 8.5rem;
}

.font-grow {
  font-size: 1.5rem !important;
}

.transition {
  transition: all 270ms ease;
}

.font-3rem {
  font-size: 3rem !important;
}

.justify-self-start {
  justify-self: start;
}

.align-items-center {
  align-items: center;
}

.align-self-center {
  align-self: center;
}

.justify-self-end {
  justify-self: end !important;
}

.justify-items-center {
  justify-items: center;
}

.justify-items-end {
  justify-items: end;
}

.justify-content-center {
  justify-content: center;
}

.justify-self-center {
  justify-self: center !important;
}

.bold-font {
  font-family: var( --anton-font );
}

.btn {
  background: transparent !important;
}

/* Custom styles */
body {
  --primary-color: #240538;
  --secondary-color: #F49019;
  --header-font: 'first_orderregular', sans-serif;
  --z-index-layer1: -400;
  --z-index-layer2: -200;
  --z-index-layer4: 200;
  --z-index-layer5: 400;
  --z-index-top: 600;
  --z-index-mostTop: 9999;
  font-family: 'capture_itregular', sans-serif;
  letter-spacing: 1.87px;
}

/* Overwrite bootstrap utilties */

.bg-primary {
  background: var(--primary-color) !important;
}

.bg-secondary {
  background: var(--secondary-color) !important;
}

.bg-dark {
  background: #000 !important;
}

.border-primary {
  border-color: var( --primary-color ) !important;
}

.text-dark {
  color: #000 !important;
}

.text-primary {
  color: var(--primary-color) !important;
}

a.text-primary:focus,
a.text-primary:hover {
  color: var(--primary-color) !important;
}

.text-secondary {
  color: var(--secondary-color) !important;
}

a.text-secondary:focus,
a.text-secondary:hover {
  color: var(--secondary-color) !important;
}

a:hover,
a:focus {
  text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var( --header-font ), sans-serif;
}

h2 {
  font-size: 2.88rem;
}

/* Sections */

.home-section {
  background: url(../img/home-img.jpeg);
}

.home-section::after {
  content: "";
  display: block;
  position: absolute;
  height: 2rem;
  width: 100vw;
  top: 97%;
  /* margin-top: 35.5rem; */
  background: url( ../img/s-home-border.png );
}

.s-about {
  grid-column: 2 / 6;
}

.s-testimonies {
  background: url( ../img/testimonies-bg.jpeg );
}

.s-about__description {
  color: rgba( 0, 0, 0, .8 );
}

.s-about__img {
  grid-column: 7 / 12;
}

.s-blog {
  background: url(../img/home-img.jpeg);
}

.section-skew {
  transform: skewY(-2.7deg) !important;
}

.container-skew {
  transform: skewY(2.7deg);
}

.whole-cols-width {
  grid-column: 1 / 13;
}

.s-blog--cols {
  grid-template-columns: repeat( 7, 1fr );
  grid-column-gap: 1.75rem;
}

.s-blog__article:nth-child(2) {
  grid-column: 2 / 4;
}

.s-blog__article:nth-child(3) {
  grid-column: 4 / 6;
}

.s-blog__article:nth-child(4) {
  grid-column: 6 / 8;
}

.s-footer__projects {
  grid-column: 2 / 4;
}

.s-footer__links {
  grid-column: 5 / 7;
}

.s-footer__promotion {
  grid-column: 8 / 11;
}

.contact-input {
  background: rgba(255, 255, 255, .18);
}

.contact-grid {
  grid-template-columns: repeat( 3, 1fr );
}

.project-item:nth-child(1) {
  grid-column: 3 / 4;
  transform: translateY(3.3rem);
}

.project-item:nth-child(2) {
  grid-column: 5 / 6;
}

.project-item:nth-child(3) {
  grid-column: 6 / 7;
  transform: translateY(3.3rem);

}

.project-item:nth-child(4) {
  grid-column: 7 / 8;
}

.project-item:nth-child(5) {
  grid-column: 8 / 9;
  transform: translateY(3.3rem);

}

.project-item:nth-child(6) {
  grid-column: 9 / 10;
}

.project-item:nth-child(7) {
  grid-column: 10 / 11;
  transform: translateY(3.3rem);
}

.form-grid {
  grid-template-columns: repeat(5, 1fr);
}

.subscribe-input {
  width: 46rem;
  border-radius: 11px 0 0 11px;
}

.form-subscribe {
  grid-column: 4 / 9;
}

.subscribe-submit-btn {
  width: 9rem;
  border-radius: 0 19px 19px 0;
  margin-left: -.2rem;
  margin-top: .3rem;
}

.bg-multiply {
  background-color: rgba(0, 0, 0, .6);
  background-blend-mode: multiply;
}

.s-portfolio--gap {
  grid-gap: .87rem;
}

.portfolio-item {
  filter: hue-rotate(365deg) saturate(1.75);
}

.portfolio-item:hover,
.portfolio-item:focus {
  transform: translateY(1.6rem);
}


.portfolio-item--filter {
  filter: hue-rotate(570deg) saturate(2) !important;
}

/* Carousels */
.carousel-testimonies__img {
  grid-column: 5 / 7;
  justify-self: end
}

.carousel-testimonies__title {
  grid-column: 7 / 9;
  justify-self: start;
  margin-left: -1.65rem;
}

.carousel-testimonies__description {
  grid-column: 7 / 9;
  justify-self: start;
}
/* ... */

